# BadgerAI

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  badgerai.bat  badgerai.ps1  doclist.txt  gethelp-app.jsx  worker.js  wrangler.toml
frontend/: app.js  electron-builder.yml  index.html  package-lock.json  package.json  style.css  vite.config.js
frontend/electron/: main.cjs
frontend/src/: App.jsx
npm/plshelp/: install.js  package.json  run.js
npm/plshelp-darwin-arm64/: package.json
npm/plshelp-linux-x64/: package.json
npm/plshelp-win32-x64/: package.json
rag_service/: config.py  database.py  embedder.py  requirements.txt  reranker.py  search.py  server.py  start.py
site/public/: docs.html  index.html  install.ps1  install.sh  registry.html  wrangler.jsonc
site/public/registry/: index.json
site/public/registry/index/: index_2026-03-10T18-31-47Z.json  index_2026-03-10T19-03-54Z.json  index_2026-03-10T19-07-13Z.json  index_2026-03-10T21-40-34Z.json  index_2026-03-10T22-03-32Z.json
site/registry/: sources.json
site/registry/builder/: Cargo.toml
site/registry/builder/src/: main.rs
src/: artifacts.rs  chunk.rs  cli.rs  commands.rs  crawl.rs  db.rs  embed.rs  lib.rs  libraries.rs  main.rs  runtime.rs  search.rs  ui.rs
src/ingest/: chunk.rs  crawl.rs  index.rs  mod.rs
src/rag/: embed.rs  mod.rs  rerank.rs  search.rs
