[package]
name = "plshelp"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
hashbrown = "0.16.1"
html2md = "0.2.15"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sentencex = "0.1.13"
spider = { version = "2.45.19", features = ["regex"] }
toml = "0.8.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"
unicode-width = "0.2.2"

[target.'cfg(unix)'.dependencies]
termios = "0.3.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.1", features = ["Win32_Foundation", "Win32_System_Console"] }
