[package]
name = "plshelp-registry-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
html2md = "0.2.15"
rayon = "1.11.0"
regex = "1.12.3"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
spider = { version = "2.45.19", features = ["regex"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5.8"
